@@ -280,7 +280,6 @@ BEGIN
         BEGIN
             MENUITEM "Detach from Debugger",        ID_MISCELLANEOUS_DETACHFROMDEBUGGER
             MENUITEM "GDI Handles",                 ID_MISCELLANEOUS_GDIHANDLES
-            MENUITEM "Heaps",                       ID_MISCELLANEOUS_HEAPS
             MENUITEM "Inject DLL...",               ID_MISCELLANEOUS_INJECTDLL
             POPUP "Page Priority"
             BEGIN
@@ -707,16 +706,6 @@ BEGIN
     LTEXT           "To view capabilities, claims and other attributes, click Advanced.",IDC_INSTRUCTION,7,228,206,8
     PUSHBUTTON      "Integrity",IDC_INTEGRITY,149,239,50,14
     PUSHBUTTON      "Advanced",IDC_ADVANCED,203,239,50,14
-END
-
-IDD_HEAPS DIALOGEX 0, 0, 342, 267
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Heaps"
-FONT 8, "MS Shell Dlg", 400, 0, 0x1
-BEGIN
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,7,328,233
-    CONTROL         "Sizes in bytes",IDC_SIZESINBYTES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,248,59,10
-    DEFPUSHBUTTON   "Close",IDOK,285,246,50,14
 END
 
 IDD_HIDDENPROCESSES DIALOGEX 0, 0, 337, 221
@@ -1954,14 +1943,6 @@ BEGIN
         RIGHTMARGIN, 253
         TOPMARGIN, 7
         BOTTOMMARGIN, 253
-    END
-
-    IDD_HEAPS, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 335
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 260
     END
 
     IDD_HIDDENPROCESSES, DIALOG
